--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Welcome</title>
+    <title>TEST</title>
     <meta name="description" content="A personal page about projects with shell script, C/C++ and PIC microcontrollers... Have fun!"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#157878">
