--- a/tutorials/install_opencv/install_opencv.html
+++ b/tutorials/install_opencv/install_opencv.html
@@ -144,7 +144,7 @@ table {
 </div>
 </div>
 <div id="content">
-<div class="sect1">
+<div class="sect1 text-justify">
 <h2 id="_opencv_installation">OpenCV Installation</h2>
 <div class="sectionbody">
 <div class="paragraph">
@@ -299,14 +299,14 @@ make</code></pre>
 </div>
 </div>
 <div class="paragraph">
-<p>For any suggestion or correction, please contact-me: <a href="mailto:felipeomar.c@gmail.com">felipeomar.c@gmail.com</a></p>
+<p>For any suggestion or correction, please contact me: <a href="mailto:felipeomar.c@gmail.com">felipeomar.c@gmail.com</a></p>
 </div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2017-08-14 10:15:34 BRT
+Last updated 2017-08-31 23:56:24 BRT
 </div>
 </div>
 </body>
