--- a/projects/negative_image/negative_image.html
+++ b/projects/negative_image/negative_image.html
@@ -142,13 +142,13 @@ table {
 </div>
 </div>
 <div id="content">
-<div class="sect1">
+<div class="sect1 text-justify">
 <h2 id="_negative_region_with_opencv">Negative Region With OpenCV</h2>
 <div class="sectionbody">
 <div class="sect2">
 <h3 id="_introduction">Introduction</h3>
 <div class="paragraph">
-<p>In the old times, when the cameras used an analogic technology, it was common to see some films wich contained negatives images of a picture. In this images, the dark points turn bright, and the bright points turn dark, as you can see in the <a href="#negative_figure">Eiffel Tower Negative</a> figure. This effect occour due chemical processes in the film. But today, with digital cameras, this effect isn&#8217;t commonly seen. However, there are some cases where is intended to have a negative image, like in medicine applications.</p>
+<p>In the old times, when the cameras were made from an analogic technology, it was common to see some films which had negatives images of a picture. In this negatives images, the dark points of a picture are turned bright, and the bright points are turned dark, as you can see in the <a href="#negative_figure">Eiffel Tower Negative</a> figure. This effect occour due chemical processes in the film. But today, with digital cameras, this effect isn&#8217;t commonly seen. However, there are some cases where is intended to have a negative image, like in medicine applications.</p>
 </div>
 <div class="openblock">
 <div class="content">
@@ -167,13 +167,13 @@ table {
 </div>
 </div>
 <div class="paragraph">
-<p>This project will show a simple program that takes an image file and convert it in a negative image. Moreover, there will be the possibility of choose the region that the program will apply the modification. For this, the user must give the image file name and two points. These points will define a rectangular region, and this region will be processed to have the negative effect.</p>
+<p>This project will show a simple program that takes an image file and convert it in a negative image. Moreover, there will be the possibility of user choose the region that the program will apply the modification. For this, the user must give the image file name and two points. These points will define a rectangular region, and this region will be processed to have the negative effect.</p>
 </div>
 </div>
 <div class="sect2">
 <h3 id="_implemetation_with_opencv_c">Implemetation with OpenCV C++</h3>
 <div class="paragraph">
-<p>We will work with two types of images: A grayscale and a colour image. We can implement a code that takes an grayscale image and change the pixels to form a negative image. In this case, each pixel is represented by a byte, wich the value 0 (0b00000000) represent no bright (black colour) and the value 255 (0b11111111) represents the high level of brightness (white color). Observing the binary representation, if you want to turn a white pixel in black, just apply the logical operation <strong>not</strong>, bit by bit. In the same way, if you apply the operation <em>not</em> in a black pixel, it will be white. This rule can be applicate for any value in a pixel.  In case of colour image, the same rule is valid for each <em>R</em>, <em>G</em> and <em>B</em> pixel: apply the <em>not</em> operation, and you will take a negative value.</p>
+<p>We can work with two types of images: A grayscale and a colour image. In the case of grayscale image, to form a negative image, we need to apply the <em>not</em> logical operation. Observing the binary representation, if you have a white pixel, its value is given by 255 (0b11111111). So, applying the <em>not</em> operation, we will obtain the 0 (0b00000000) value response, representing a black pixel. In the same way, if you apply the operation <em>not</em> in a black pixel, it will be white. This rule can be applied for any value in a pixel, and in case of colour image, the same rule is valid for each <em>R</em>, <em>G</em> and <em>B</em> pixel: apply the <em>not</em> operation, and you will take a negative value of each layer.</p>
 </div>
 <div class="paragraph">
 <p>The next C++ code show one way to have a negative from a colour image:</p>
@@ -250,6 +250,16 @@ table {
 <span class="tok-p">}</span></code></pre>
 </div>
 </div>
+<div class="sect3">
+<h4 id="_how_the_code_works">How the code works?</h4>
+<div class="paragraph">
+<p>To obtain the wished behavior, the next steps are made:</p>
+</div>
+<div class="imageblock">
+<div class="content">
+<img src="png.png" alt="png" width="244" height="599">
+</div>
+</div>
 <div class="paragraph">
 <p>For any suggestion or correction, please contact me: <a href="mailto:felipeomar.c@gmail.com">felipeomar.c@gmail.com</a></p>
 </div>
@@ -257,9 +267,10 @@ table {
 </div>
 </div>
 </div>
+</div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2017-08-24 15:13:12 BRT
+Last updated 2017-08-31 23:57:53 BRT
 </div>
 </div>
 </body>
