--- a/tutorials/systemVerilog/and_port/and_port.html
+++ b/tutorials/systemVerilog/and_port/and_port.html
@@ -52,8 +52,8 @@ video {
 table {
   width: 55vw!important;
   font-size: 3vw;
-}
-
+  caption-side: bottom
+}  
 </style>
 <style>
 .listingblock .pygments .hll { background-color: #ffffcc }
@@ -152,7 +152,7 @@ table {
 <div id="content">
 <div id="preamble">
 <div class="sectionbody">
-<div class="paragraph text-justify">
+<div class="paragraph">
 <p>This tutorial will show how to describe a component which has the behavior of an AND port. The objective is show some initial points about the SystemVerilog language and the modelsim enviroment. For this, an <em>and_device</em> and an <em>and_testbench</em> will be developed, and tested in a modelsim environment.</p>
 </div>
 </div>
@@ -406,7 +406,7 @@ table {
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2017-10-14 18:46:26 BRT
+Last updated 2017-10-15 17:44:51 BRT
 </div>
 </div>
 </body>
