--- a/tutorials/systemVerilog/systemVerilog.html
+++ b/tutorials/systemVerilog/systemVerilog.html
@@ -136,6 +136,7 @@ table {
 <li><a href="#_examples">Examples</a>
 <ul class="sectlevel2">
 <li><a href="#_a_href_and_port_and_port_html_a_simple_component_with_systemverilog_a"><a href="and_port/and_port.html">A simple component with SystemVerilog</a></a></li>
+<li><a href="#_a_href_mux_4x1_mux_4x1_html_designing_a_multiplexer_device_a"><a href="mux_4x1/mux_4x1.html">Designing a Multiplexer Device</a></a></li>
 </ul>
 </li>
 </ul>
@@ -162,12 +163,18 @@ table {
 <p>In this example, we will see the fundamentals of SystemVerilog syntax. The easiest way to start to learn a new language is analyzing a simple component, with few ports. So, in this example is suggested to implement an and port, where we will design the component, make a testbench and observe the results in a modelsim enviroment.</p>
 </div>
 </div>
+<div class="sect2 text-justify">
+<h3 id="_a_href_mux_4x1_mux_4x1_html_designing_a_multiplexer_device_a"><a href="mux_4x1/mux_4x1.html">Designing a Multiplexer Device</a></h3>
+<div class="paragraph">
+<p>Multiplexers are one of the most used components in digital systems. So, it&#8217;s important to know how a multiplexer can be implemented with SystemVerilog language. Here, the comportamental design will be introduced, and some topics about this kind of description will be discussed. So, we will develop a mux device, a testebench and a modelsim simulation to make sure that our description works well.</p>
+</div>
+</div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2017-10-14 17:13:47 BRT
+Last updated 2017-10-14 22:25:54 BRT
 </div>
 </div>
 </body>
